Changed title to new dowmain name

--- a/index.html
+++ b/index.html
@@ -1,2 +1,2 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
-<html><body bgcolor="#000000"><head><meta content="text/html; charset=ISO-8859-1" http-equiv="content-type"><title>RetroLegacy</title></head><body><div style="text-align: center;"><br><br><br><br><img style="width: 640px; height: 480px;" alt="" src="retrolegacy.png"></div></body></html>
+<html><body bgcolor="#000000"><head><meta content="text/html; charset=ISO-8859-1" http-equiv="content-type"><title>Retro Video Games</title></head><body><div style="text-align: center;"><br><br><br><br><img style="width: 640px; height: 480px;" alt="" src="retrolegacy.png"></div></body></html>
